API: fix routes
